KRSupdated_09122021/force-app/main/default/objects/Category_Product__c/Category_Product__c.object-meta.xml
<CustomObject>
    <label>Category Product</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Category Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>