KRSupdated_09122021/force-app/main/default/objects/Category_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Category Products</relationshipLabel>
    <relationshipName>Category_Products</relationshipName>
    <type>Lookup</type>
</CustomField>