KRSupdated_09122021/force-app/main/default/objects/Category_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Variant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>